--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#a8a8a8</color>
+    <color name="colorPrimaryDark">#4f4f4f</color>
+    <color name="colorAccent">#3ab257</color>
+    <color name="black">#000000</color>
+    <color name="grey">#737373</color>
 </resources>
