--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,53 +8,38 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sawicka.neurosurvey.MainActivity">
+    tools:context="com.sawicka.neurosurvey.activity.MainActivity">
 
-    <GridLayout
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/editText"
-            android:text="Apka Zdrapka"
-            android:textSize="35sp"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:layout_marginBottom="30dp"/>
-
         <Button
             android:id="@+id/newTestButton"
             android:text="New test"
+            android:layout_weight="1"
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="1"
             android:onClick="newTest"/>
 
         <Button
             android:id="@+id/recentButton"
             android:text="Recent"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="2"/>
+            android:layout_weight="1"
+            android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/exportButton"
             android:text="Export"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="3"/>
+            android:layout_weight="1"
+            android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/settingsButton"
             android:text="Settings"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="4"/>
-    </GridLayout>
+            android:layout_weight="1"
+            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+    </LinearLayout>
 </RelativeLayout>
