--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4a4aca</color>
-    <color name="colorPrimaryDark">#1d1d49</color>
-    <color name="colorAccent">#ff6699</color>
+    <color name="colorPrimary">#113fcb</color>
+    <color name="colorPrimaryDark">#020203</color>
+    <color name="colorAccent">#ef4309</color>
     <color name="black">#000000</color>
     <color name="grey">#737373</color>
 </resources>
