Wczytywanie danych - zakończone Wczytywanie danych z pytań o typie listy Poprawki w wartościach 'other' - są oddzielne; nie należą do listy pytania

--- a/app/src/main/res/layout/activity_new_test.xml
+++ b/app/src/main/res/layout/activity_new_test.xml
@@ -39,8 +39,9 @@
         <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q2b"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:choiceMode="singleChoice"/>
-        <EditText
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+        <EditText android:id="@+id/other_2b"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:hint="@string/other" android:inputType="textMultiLine"/>
 
         <TextView android:text="@string/quest3"
             android:textSize="17sp" android:layout_marginTop="25dp"
@@ -93,8 +94,9 @@
         <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q9"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:choiceMode="multipleChoice"/>
-        <EditText
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+        <EditText android:id="@+id/other_9"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:hint="@string/other" android:inputType="textMultiLine"/>
 
         <TextView android:text="@string/quest10"
             android:textSize="17sp" android:layout_marginTop="25dp"
@@ -109,15 +111,18 @@
         <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q11"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:choiceMode="singleChoice"/>
-        <EditText
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+        <EditText android:id="@+id/other_11"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:hint="@string/other" android:inputType="textMultiLine"/>
 
         <TextView android:text="@string/quest12"
             android:textSize="17sp" android:layout_marginTop="25dp"
             android:layout_width="match_parent" android:layout_height="wrap_content"/>
-        <EditText
+        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/added_listView_12"
+            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        <EditText android:id="@+id/edit_text_12"
             android:layout_width="match_parent" android:layout_height="wrap_content" />
-        <Button
+        <Button android:id="@+id/button_add_12"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="Add"/>
 
@@ -216,8 +221,9 @@
         <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q23"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:choiceMode="multipleChoice"/>
-        <EditText
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+        <EditText android:id="@+id/other_23"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:hint="@string/other" android:inputType="textMultiLine"/>
 
         <TextView android:text="@string/quest24"
             android:textSize="17sp" android:layout_marginTop="25dp"
@@ -225,15 +231,18 @@
         <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q24"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:choiceMode="multipleChoice"/>
-        <EditText
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+        <EditText android:id="@+id/other_24"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:hint="@string/other" android:inputType="textMultiLine"/>
 
         <TextView android:text="@string/quest25"
             android:textSize="17sp" android:layout_marginTop="25dp"
             android:layout_width="match_parent" android:layout_height="wrap_content"/>
-        <EditText
+        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/added_listView_25"
+            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        <EditText android:id="@+id/edit_text_25"
             android:layout_width="match_parent" android:layout_height="wrap_content" />
-        <Button
+        <Button android:id="@+id/button_add_25"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="Add"/>
 
@@ -369,8 +378,9 @@
         <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q31"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:choiceMode="multipleChoice"/>
-        <EditText
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+        <EditText android:id="@+id/other_31"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:hint="@string/other" android:inputType="textMultiLine"/>
 
         <Button android:id="@+id/button_save"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
