--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,29 +17,27 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/newTestButton"
-            android:text="New test"
-            android:layout_weight="1"
+
+        <LinearLayout
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:onClick="newTest"/>
+            android:orientation="horizontal">
+            <ImageView android:id="@+id/user_image" style="@style/PictureStyle"
+                android:contentDescription="@string/yes"/>
+            <TextView android:id="@+id/logged_user_name"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:gravity="center_horizontal" android:layout_gravity="center" android:textSize="15sp"/>
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/recentButton"
+        <Button android:id="@+id/new_test_button"
+            android:text="New test"
+            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+
+        <Button android:id="@+id/recent_button"
             android:text="Recent"
-            android:layout_weight="1"
             android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/exportButton"
+        <Button android:id="@+id/export_button"
             android:text="Export"
-            android:layout_weight="1"
-            android:layout_width="match_parent" android:layout_height="wrap_content"/>
-
-        <Button
-            android:id="@+id/settingsButton"
-            android:text="Settings"
-            android:layout_weight="1"
             android:layout_width="match_parent" android:layout_height="wrap_content"/>
     </LinearLayout>
 </RelativeLayout>
