--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,9 @@
         <item name="android:textSize">13sp</item>
         <item name="android:colorButtonNormal">#f7f6f6</item>
     </style>
-
+    <style name="PictureStyle">
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:background">@drawable/picture_style</item>
+    </style>
 </resources>
