Praca nad plikiem - ciąg dalszy Wpisywanie do pliku wartości radio, check, seek i other
TODO: Wpisywanie 'other', poprawa wyrzucania wyjątków (MyAlert)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,16 @@
                 android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:gravity="center_horizontal" android:layout_gravity="center" android:textSize="15sp"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:text="Data file: "
+                android:padding="8dp"/>
+            <TextView android:id="@+id/data_file_name"
+                android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        </LinearLayout>
 
         <Button android:id="@+id/new_test_button"
             android:text="New test"
