--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sawicka.neurosurvey.activity.MainActivity">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    tools:context="com.sawicka.neurosurvey.activity.MainActivity"
+    android:orientation="vertical">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:background="@color/colorSecondary" android:orientation="vertical" android:layout_gravity="end">
+        <Button android:id="@+id/logging_button"
+            android:text="Log me!"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:textSize="12sp" android:background="@color/colorSecondary"
+            android:layout_gravity="end"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:orientation="vertical" android:padding="2dp">
 
         <LinearLayout
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal" android:padding="20dp">
+
             <ImageView android:id="@+id/user_image" style="@style/PictureStyle"
                 android:contentDescription="@string/yes"/>
             <TextView android:id="@+id/logged_user_name"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:gravity="center_horizontal" android:layout_gravity="center" android:textSize="15sp"/>
+                android:gravity="center_horizontal" android:layout_gravity="center" android:textSize="18sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal" android:layout_gravity="end" android:padding="5dp">
             <TextView
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
-                android:text="Data file: "
-                android:padding="8dp"/>
+                android:text="Data file: " android:layout_weight="1"
+                android:padding="12dp" android:textSize="16sp"/>
             <TextView android:id="@+id/data_file_name"
-                android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:padding="15dp" android:textSize="16sp"/>
+            <Button android:id="@+id/select_file"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:textAllCaps="false" android:layout_weight="1"
+                android:padding="15dp" android:text="Select file"/>
         </LinearLayout>
 
-        <Button android:id="@+id/new_test_button"
-            android:text="New test"
-            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:orientation="vertical" android:padding="10dp"
+            android:layout_width="match_parent" android:layout_height="match_parent"
+            android:paddingTop="15dp">
 
-        <Button android:id="@+id/recent_button"
-            android:text="Recent"
-            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+            <Button android:id="@+id/new_test_button"
+                android:text="New test"
+                android:layout_width="match_parent" android:layout_height="0dp"
+                android:layout_weight="1" android:padding="5dp" android:layout_marginTop="5dp"/>
 
-        <Button android:id="@+id/export_button"
-            android:text="Export"
-            android:layout_width="match_parent" android:layout_height="wrap_content"/>
+            <Button android:id="@+id/history_button"
+                android:text="Survey history"
+                android:layout_width="match_parent" android:layout_height="0dp"
+                android:layout_weight="1" android:padding="5dp" android:layout_marginTop="5dp"/>
 
-        <Button android:id="@+id/settings_button"
-            android:text="Settings"
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+            <Button android:id="@+id/settings_button"
+                android:text="Settings - common answers"
+                android:layout_width="match_parent" android:layout_height="0dp"
+                android:layout_weight="1" android:padding="5dp" android:layout_marginTop="5dp"/>
+        </LinearLayout>
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
