--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,29 +4,26 @@
     android:id="@+id/activity_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.sawicka.neurosurvey.SettingsActivity">
+    tools:context="com.sawicka.neurosurvey.activity.SettingsActivity">
 
-    <TextView
-        android:text="Logged as: "
-        android:layout_width="match_parent" android:layout_height="wrap_content" />
-    <Button
-        android:text="Sign out"
-        android:layout_width="wrap_content" android:layout_height="wrap_content" />
+    <TextView android:text="Add new element:"
+        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="match_parent" android:layout_height="wrap_content">
+        <EditText android:id="@+id/new_item_common_name"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_weight="8"/>
+        <Spinner android:id="@+id/question_list_dropdown"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <Button android:id="@+id/add_common_item_button" android:text="Add"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
-    <TextView
-        android:text="Template file name: "
-        android:layout_width="match_parent" android:layout_height="wrap_content" />
-
-    <TextView
-        android:text="Data file name: "
-        android:layout_width="match_parent" android:layout_height="wrap_content" />
-
-    <TextView
-        android:text="Language: "
-        android:layout_width="match_parent" android:layout_height="wrap_content" />
+    <ExpandableListView android:id="@+id/commons_list"
+        android:layout_width="match_parent" android:layout_height="match_parent"/>
 </LinearLayout>
