--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#113fcb</color>
+    <color name="colorSecondary">#bdc9ed</color>
     <color name="colorPrimaryDark">#020203</color>
     <color name="colorAccent">#ef4309</color>
     <color name="black">#000000</color>
